fixed headerNav gap

--- a/BlackRidge.css
+++ b/BlackRidge.css
@@ -13,7 +13,7 @@
     #headerNav {
         display: flex; 
         justify-content: space-between;
-        gap: auto; 
+        gap: 20px;
         align-items: center; 
         padding: 30px; 
         position: relative; 
